--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8"/>
         <link href="style.css" rel="stylesheet"/>
-        <title>Leonhard Studios</title>
+        <title>Leon Art Studios</title>
     </head>
 
     <body>
     <div class="container">
         <header class="main-header clearfix">
-            <h1>🦁 Leonhard Studios</h1>
+            <h1>🦁 Leon Art Studios</h1>
 
         <nav>
             <!-- <strong>This is the navigation</strong> -->
